# ghostcontext

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: push_mirror.ps1  push_mirror.sh
src/ghostcontext/: __init__.py  __main__.py  app.py  config.py  main.py
src/ghostcontext/routers/: __init__.py  chat_completions.py
src/ghostcontext/schemas/: __init__.py  openai_chat.py
src/ghostcontext/services/: __init__.py  logging_fs.py  memory.py  upstream.py
